# Lemnos

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/lemnos/: Cargo.toml  README.md
crates/lemnos-bus/: Cargo.toml  README.md
crates/lemnos-bus/src/: backend.rs  contract.rs  error.rs  gpio.rs  i2c.rs  lib.rs  pwm.rs  session.rs  spi.rs  tests.rs  uart.rs  usb.rs
crates/lemnos-core/: Cargo.toml  README.md
crates/lemnos-core/src/: capability.rs  configured.rs  error.rs  event.rs  ids.rs  interface.rs  issue.rs  lib.rs  state.rs  time.rs  value.rs
crates/lemnos-core/src/descriptor/: kinds.rs  metadata.rs  mod.rs  model.rs  tests.rs
crates/lemnos-core/src/request/: gpio.rs  i2c.rs  mod.rs  pwm.rs  spi.rs  tests.rs  uart.rs  usb.rs
crates/lemnos-core/tests/: portable_surface.rs
crates/lemnos-discovery/: Cargo.toml  README.md
crates/lemnos-discovery/src/: context.rs  error.rs  fixtures.rs  inventory.rs  lib.rs  probe.rs  report.rs  run.rs  tests.rs
crates/lemnos-driver-manifest/: Cargo.toml  README.md
crates/lemnos-driver-manifest/src/: error.rs  interaction.rs  lib.rs  manifest.rs  matching.rs  tests.rs  validation.rs  version.rs
crates/lemnos-driver-sdk/: Cargo.toml  README.md
crates/lemnos-driver-sdk/examples/: minimal_gpio_driver.rs
crates/lemnos-driver-sdk/src/: conformance.rs  context.rs  error.rs  gpio.rs  i2c.rs  lib.rs  linux.rs  matching.rs  operation.rs  output.rs  pwm.rs  spi.rs  state_helpers.rs  state_keys.rs  stats_helpers.rs  tests.rs  transport.rs  uart.rs  usb.rs
crates/lemnos-driver-sdk/src/device/: macros.rs  mod.rs  model.rs
crates/lemnos-drivers-gpio/: Cargo.toml  README.md
crates/lemnos-drivers-gpio/src/: bound.rs  driver.rs  lib.rs  manifest.rs  stats.rs  tests.rs  values.rs
crates/lemnos-drivers-i2c/: Cargo.toml  README.md
crates/lemnos-drivers-i2c/src/: bound.rs  driver.rs  lib.rs  manifest.rs  stats.rs  tests.rs
crates/lemnos-drivers-pwm/: Cargo.toml  README.md
crates/lemnos-drivers-pwm/src/: bound.rs  driver.rs  lib.rs  manifest.rs  stats.rs  tests.rs  values.rs
crates/lemnos-drivers-uart/: Cargo.toml  README.md
crates/lemnos-drivers-uart/src/: bound.rs  driver.rs  lib.rs  manifest.rs  stats.rs  tests.rs  values.rs
crates/lemnos-drivers-usb/: Cargo.toml  README.md
crates/lemnos-drivers-usb/src/: bound.rs  driver.rs  lib.rs  manifest.rs  stats.rs  tests.rs  values.rs
crates/lemnos-linux/: Cargo.toml  README.md
crates/lemnos-linux/src/: lib.rs  metadata.rs  paths.rs  util.rs  watch.rs
crates/lemnos-linux/src/backend/: config.rs  discovery.rs  mod.rs  transport.rs
crates/lemnos-linux/src/discovery/: gpio.rs  hwmon.rs  i2c.rs  led.rs  mod.rs  pwm.rs  spi.rs  uart.rs  usb.rs
crates/lemnos-linux/src/tests/: backend.rs  discovery.rs  hotplug.rs  mod.rs  support.rs
crates/lemnos-linux/src/transport/: mod.rs  pwm.rs  session.rs  spi.rs
crates/lemnos-linux/src/transport/gpio/: cdev.rs  mod.rs  sysfs.rs
crates/lemnos-linux/src/transport/i2c/: kernel.rs  mod.rs  sessions.rs  smbus.rs  tests.rs
crates/lemnos-linux/src/transport/uart/: kernel.rs  mod.rs  sessions.rs  tests.rs
crates/lemnos-linux/src/transport/usb/: libusb_transport.rs  mod.rs  tests.rs
crates/lemnos-macros/: Cargo.toml  README.md
crates/lemnos-macros-tests/: Cargo.toml  README.md
crates/lemnos-macros-tests/tests/: compile_fail.rs  configured_device_and_driver.rs
crates/lemnos-macros-tests/tests/support/: lemnos_shim.rs
crates/lemnos-macros-tests/tests/ui/: configured_duplicate_endpoint_name.rs  configured_duplicate_endpoint_name.stderr  configured_spi_interface_mismatch.rs  configured_spi_interface_mismatch.stderr  driver_kind_interface_mismatch.rs  driver_kind_interface_mismatch.stderr  driver_unspecified_kind.rs  driver_unspecified_kind.stderr
crates/lemnos-macros/src/: builder.rs  driver.rs  enum_values.rs  lib.rs
crates/lemnos-macros/src/configured_device/: codegen.rs  helpers.rs  mod.rs  spec.rs
crates/lemnos-macros/src/configured_device/spec/: types.rs
crates/lemnos-macros/tests/ui/: configured_duplicate_endpoint_name.stderr  configured_spi_interface_mismatch.stderr  driver_kind_interface_mismatch.stderr  driver_unspecified_kind.stderr
crates/lemnos-mock/: Cargo.toml  README.md
crates/lemnos-mock/src/: faults.rs  gpio.rs  i2c.rs  lib.rs  pwm.rs  spi.rs  tests.rs  uart.rs
crates/lemnos-mock/src/hardware/: backends.rs  builder.rs  inventory.rs  mod.rs
crates/lemnos-mock/src/usb/: descriptor.rs  device.rs  mod.rs  session.rs
crates/lemnos-registry/: Cargo.toml  README.md
crates/lemnos-registry/src/: candidate.rs  driver_id.rs  error.rs  lib.rs  registry.rs  report.rs  tests.rs
crates/lemnos-runtime/: Cargo.toml  README.md
crates/lemnos-runtime/src/: backends.rs  config.rs  diagnostics.rs  error.rs  lib.rs  subscription.rs
crates/lemnos-runtime/src/async_runtime/: mod.rs  refresh.rs  requests.rs  state.rs  subscription.rs  sync.rs
crates/lemnos-runtime/src/runtime/: events.rs  failures.rs  lifecycle.rs  mod.rs  operations.rs  refresh.rs  requests.rs  retention.rs  watch.rs
crates/lemnos-runtime/src/tests/: async_runtime.rs  host_linux.rs  mod.rs  support.rs
crates/lemnos/examples/: linux_device_validator.rs  linux_hwmon_fan_driver.rs  linux_led_class_driver.rs  mock_bmi088_driver.rs  mock_bmm150_driver.rs  mock_gpio.rs  mock_gpio_async.rs  mock_gpio_explicit_backend.rs  mock_ina226_driver.rs  mock_power_sensor_driver.rs  mock_usb_hotplug.rs
crates/lemnos/examples/linux_device_validator/: inventory.rs  setup.rs  validation.rs
crates/lemnos/examples/support/: linux_hwmon_fan.rs  linux_led.rs  linux_response.rs  linux_test_root.rs  mock_gpio.rs  mod.rs
crates/lemnos/src/: builtin.rs  lib.rs  prelude.rs  tests.rs
crates/lemnos/src/facade/: async_facade.rs  async_linux.rs  builder.rs  core.rs  linux.rs  mod.rs  requests.rs
crates/lemnos/src/tests/: builder.rs
crates/lemnos/tests/: async_facade.rs  docker_facade_examples.rs  linux_hwmon_fan_driver.rs  linux_led_driver.rs
crates/lemnos/tests/support/: docker_facade.rs  mod.rs
(+51 files in other folders)
