[workspace]
members = [
    "crates/lemnos",
    "crates/lemnos-core",
    "crates/lemnos-bus",
    "crates/lemnos-discovery",
    "crates/lemnos-driver-sdk",
    "crates/lemnos-driver-manifest",
    "crates/lemnos-registry",
    "crates/lemnos-runtime",
    "crates/lemnos-linux",
    "crates/lemnos-macros",
    "crates/lemnos-macros-tests",
    "crates/lemnos-drivers-gpio",
    "crates/lemnos-drivers-pwm",
    "crates/lemnos-drivers-i2c",
    "crates/lemnos-drivers-spi",
    "crates/lemnos-drivers-uart",
    "crates/lemnos-drivers-usb",
    "crates/lemnos-mock",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.0.0"
license = "MIT OR Apache-2.0"
rust-version = "1.94"
repository = "https://github.com/Prometheus-Dynamics/Lemnos"
homepage = "https://github.com/Prometheus-Dynamics/Lemnos"

[workspace.dependencies]
lemnos = { version = "1.0.0", path = "crates/lemnos" }
lemnos-bus = { version = "1.0.0", path = "crates/lemnos-bus" }
lemnos-core = { version = "1.0.0", path = "crates/lemnos-core" }
lemnos-discovery = { version = "1.0.0", path = "crates/lemnos-discovery" }
lemnos-driver-manifest = { version = "1.0.0", path = "crates/lemnos-driver-manifest" }
lemnos-driver-sdk = { version = "1.0.0", path = "crates/lemnos-driver-sdk" }
lemnos-drivers-gpio = { version = "1.0.0", path = "crates/lemnos-drivers-gpio" }
lemnos-drivers-i2c = { version = "1.0.0", path = "crates/lemnos-drivers-i2c" }
lemnos-drivers-pwm = { version = "1.0.0", path = "crates/lemnos-drivers-pwm" }
lemnos-drivers-spi = { version = "1.0.0", path = "crates/lemnos-drivers-spi" }
lemnos-drivers-uart = { version = "1.0.0", path = "crates/lemnos-drivers-uart" }
lemnos-drivers-usb = { version = "1.0.0", path = "crates/lemnos-drivers-usb" }
lemnos-linux = { version = "1.0.0", path = "crates/lemnos-linux", default-features = false }
lemnos-macros = { version = "1.0.0", path = "crates/lemnos-macros" }
lemnos-mock = { version = "1.0.0", path = "crates/lemnos-mock" }
lemnos-registry = { version = "1.0.0", path = "crates/lemnos-registry" }
lemnos-runtime = { version = "1.0.0", path = "crates/lemnos-runtime" }
gpio-cdev = "0.6.0"
i2cdev = "0.6.2"
inotify = { version = "0.11.1", default-features = false }
ordered-float = { version = "5.3.0", default-features = false }
proc-macro2 = "1.0.106"
quote = "1.0.45"
rusb = "0.9.4"
serde = "1.0.228"
serde_json = "1.0.149"
serialport = { version = "4.9.0", default-features = false }
spidev = "0.7.1"
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.18"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
trybuild = "1.0.116"
tokio = { version = "1.52.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_attributes = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
