[package]
name = "lemnos-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Discovery probes, snapshots, and inventory utilities for Lemnos"
documentation = "https://docs.rs/lemnos-discovery"
readme = "README.md"
exclude = ["src/tests.rs", "src/tests/**", "src/**/tests.rs", "tests/**"]
keywords = ["hardware", "discovery", "inventory", "linux", "embedded"]
categories = ["embedded", "hardware-support"]

[lints]
workspace = true

[features]
default = []
test-utils = []

[dependencies]
lemnos-core.workspace = true
thiserror.workspace = true
