[package]
name = "lemnos-drivers-i2c"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Built-in generic I2C driver support for Lemnos"
documentation = "https://docs.rs/lemnos-drivers-i2c"
readme = "README.md"
exclude = ["src/tests.rs", "src/tests/**", "src/**/tests.rs", "tests/**"]
keywords = ["i2c", "driver", "hardware", "embedded", "lemnos"]
categories = ["embedded", "hardware-support"]

[lints]
workspace = true

[dependencies]
lemnos-bus.workspace = true
lemnos-core.workspace = true
lemnos-driver-manifest.workspace = true
lemnos-driver-sdk.workspace = true

[dev-dependencies]
lemnos-mock.workspace = true
