[package]
name = "lemnos-macros-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal integration and compile-fail tests for lemnos-macros"
publish = false

[lints]
workspace = true

[dependencies]
lemnos-core.workspace = true
lemnos-discovery.workspace = true
lemnos-driver-manifest.workspace = true
lemnos-driver-sdk.workspace = true
lemnos-macros.workspace = true

[dev-dependencies]
trybuild.workspace = true
