[package]
name = "lemnos-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for reducing Lemnos driver and model boilerplate"
documentation = "https://docs.rs/lemnos-macros"
readme = "README.md"
exclude = ["src/tests.rs", "src/tests/**", "src/**/tests.rs", "tests/**"]
keywords = ["macros", "driver", "embedded", "hardware", "lemnos"]
categories = ["development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
