[package]
name = "lemnos-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Driver registration, ranking, and selection for Lemnos"
documentation = "https://docs.rs/lemnos-registry"
readme = "README.md"
exclude = ["src/tests.rs", "src/tests/**", "src/**/tests.rs", "tests/**"]
keywords = ["driver", "registry", "hardware", "matching", "embedded"]
categories = ["embedded", "hardware-support"]

[lints]
workspace = true

[dependencies]
lemnos-core.workspace = true
lemnos-driver-manifest.workspace = true
lemnos-driver-sdk.workspace = true
thiserror.workspace = true
